--- a/public/components/partials/header.html
+++ b/public/components/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header changeable-onMenuOpen">
 	<div class="container m-full">
 		<a class="header-logo" href="/#/home">
-			<img src="uploads/img/site/ics-logo-white--no-border.png" width=40 height="auto" />
+			<img ng-src="uploads/img/site/ics-logo-white--no-border.png" width=40 height="auto" />
 		</a>
 
 		<ng-include src="'components/partials/nav-menu.html'"></ng-include>
