--- a/public/components/pages/news/news.html
+++ b/public/components/pages/news/news.html
@@ -10,10 +10,10 @@
 		<div ng-repeat="new in news" class="col l6 m6 s12 post-wrapper" id="post-{{new._id}}">
 			<div class="card post">
 				<div class="post-image">
-					<img src="{{new.coverImg}}" alt="">
+					<img ng-src="{{new.coverImg}}" alt="">
 					<div class="post-imageContent valign-wrapper">
 						<h3 class="post-title valign"> 
-							<a href="">
+							<a href="/#/post?post_id={{new._id}}">
 								<span ng-if="new.eventData" class="label">
 									<span>Event <i class="material-icons">event</i></span>
 								</span>
@@ -28,7 +28,7 @@
 
 				<div class="authorBlock">
 					<a class="authorBlock-img" href="/#/user?user_id={{new.creator._id}}">
-						<img src="{{new.creator.imgUrl}}" alt="">
+						<img ng-src="{{new.creator.imgUrl}}" alt="">
 					</a>
 					<div class="authorBlock-authorAndDate">
 						<a class="authorBlock-name" href="/#/user?user_id={{new.creator._id}}">
