fixed post-link in post page

--- a/public/components/pages/post/post.html
+++ b/public/components/pages/post/post.html
@@ -32,7 +32,7 @@
 			<div class="postPage-titleWrapper">
 				<div class="postPage-titleContent valign-wrapper">
 					<h3 class="postPage-title valign"> 
-						<a href="/#/post?post_id={{new._id}}">
+						<a href="/#/post?post_id={{post._id}}">
 							<span ng-if="post.eventData" class="label">
 								<span>Event <i class="material-icons">event</i></span>
 							</span>
