--- a/public/components/pages/news/news.html
+++ b/public/components/pages/news/news.html
@@ -42,7 +42,7 @@
 					<button ng-focus="ui.toggleClass('dropdown-' + new._id, 'active')" ng-blur="ui.toggleClass('dropdown-' + new._id, 'active', 100)" class="authorBlock-moreBtn waves-effect waves-light">
 						<i class="material-icons"> more_vert </i>
 
-						<ul id="dropdown-{{new._id}}" class="dropdownContent">
+						<ul id="dropdown-{{new._id}}" class="dropdownContent dropdownContent--right">
 							<li> <a href="/#/post?post_id={{new._id}}"> <span> Читать далее </span> </a> </li>
 							<li ng-click="deletePost(new._id, loggedUser.token)" ng-if="loggedUser.role==='admin' || loggedUser.role==='moderator'"> <span> Удалить новость </span> </li>
 						</ul>
