added dropdown for loggedUser

--- a/public/components/pages/post/post.html
+++ b/public/components/pages/post/post.html
@@ -67,7 +67,7 @@
 			</div>
 
 			<div class="card-controls">
-				<a href="{{post.eventData.registrationLink}}" ng-if="post.eventData" class="card-controls-btn btn-half waves-effect waves-light"> <span>Записаться на событие</span> </a>
+				<a href="{{post.eventData.registrationLink}}" ng-if="post.eventData" class="card-controls-btn waves-effect waves-light"> <span>Записаться на событие</span> </a>
 			</div>
 		</div>
 	</div>
