--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -1,9 +1,9 @@
-.reset-for-btn, .main-btn, .card-controls-btn, .nav-menu__mob-header .menu-toggler, .nav-menu__mob-header .arrow-right, .authorBlock-moreBtn, .btnComments {
+.reset-for-btn, .main-btn, .card-controls-btn, .nav-menu__mob-header .menu-toggler, .nav-menu__mob-header .arrow-right, .nav-menu__item.item-loggedUser, .authorBlock-moreBtn, .btnComments {
   background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer; }
-  .reset-for-btn:focus, .main-btn:focus, .card-controls-btn:focus, .nav-menu__mob-header .menu-toggler:focus, .nav-menu__mob-header .arrow-right:focus, .authorBlock-moreBtn:focus, .btnComments:focus {
+  .reset-for-btn:focus, .main-btn:focus, .card-controls-btn:focus, .nav-menu__mob-header .menu-toggler:focus, .nav-menu__mob-header .arrow-right:focus, .nav-menu__item.item-loggedUser:focus, .authorBlock-moreBtn:focus, .btnComments:focus {
     background: transparent; }
 
 ._center, .homeSlider-itemContent .valign, .homeSlider-btn, .post .label, .page {
@@ -131,9 +131,9 @@ body, html {
   background: #0091ea !important;
   text-shadow: none !important; }
   .skyBlue .header .nav-menu__item span {
-    color: #eee !important; }
+    color: #eee; }
   .skyBlue .header .nav-menu__item:hover span {
-    color: #fff !important; }
+    color: #fff; }
 
 .header {
   padding: .4em .4em 0;
@@ -327,6 +327,14 @@ body, html {
     display: block;
     padding: 5px 13px;
     margin-bottom: 15px; } }
+.nav-menu__item.item-loggedUser .dropdownContent {
+  display: block;
+  width: 10em;
+  right: auto;
+  left: -3.0em; }
+.nav-menu__item.item-loggedUser .dropdownContent.active {
+  top: 100% !important; }
+
 /* end nav-menu */
 .homeSliderWrapper {
   width: 100%;
@@ -513,6 +521,7 @@ body, html {
 
 .card-controls-btn {
   width: 100%;
+  width: calc(100% + 1px);
   border-radius: 0;
   color: #fff;
   float: left; }
@@ -773,6 +782,14 @@ body, html {
   margin: 0 !important;
   font-size: 1em;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2); }
+  .dropdownContent ul, .dropdownContent li, .dropdownContent span {
+    font-size: 1em;
+    color: #0091ea !important;
+    text-transform: none;
+    width: 100%;
+    display: inline-block; }
+  .dropdownContent span {
+    font-size: .8em; }
 
 .dropdownContent.active {
   opacity: 1;
@@ -780,6 +797,10 @@ body, html {
   height: auto;
   width: auto;
   padding: 0 .5em; }
+
+.dropdownContent--top.active {
+  top: -100%;
+  top: calc(-100% - 5px); }
 
 .dropdownContent--bottom.active {
   top: 100%;
@@ -793,10 +814,6 @@ body, html {
   right: auto;
   left: 100%;
   left: calc(100% + 5px); }
-
-.dropdownContent--top.active {
-  top: -100%;
-  top: calc(-100% - 5px); }
 
 .dropdownContent li {
   padding: .2em 0;
