--- a/markup/sass/all.scss
+++ b/markup/sass/all.scss
@@ -143,8 +143,8 @@ body, html {height: 100%;}
 	.header {
 		background: $skyBlue !important;
 		text-shadow: none !important;
-		.nav-menu__item span {color: #eee !important;}
-		.nav-menu__item:hover span {color: #fff !important;}
+		.nav-menu__item span {color: #eee;}
+		.nav-menu__item:hover span {color: #fff;}
 	}
 }
 .header {
@@ -368,6 +368,20 @@ body, html {height: 100%;}
 			padding: 5px 13px;
 			margin-bottom: 15px;
 		}
+	}
+
+	.nav-menu__item.item-loggedUser {
+		@extend .reset-for-btn;
+		
+		//border: 1px solid #eee !important;
+
+		.dropdownContent {
+			display: block;
+			width: 10em;
+			right: auto;
+			left: -3.0em;
+		}
+		.dropdownContent.active {top: 100% !important;}
 	}
 /* end nav-menu */
 
@@ -607,6 +621,7 @@ body, html {height: 100%;}
 .card-controls-btn {
 	@extend .main-btn;
 	width: 100%;
+	width: calc(100% + 1px);
 	border-radius: 0;
 	color: #fff;
 	float: left;
@@ -941,13 +956,27 @@ body, html {height: 100%;}
 	margin: 0 !important;
 	font-size: 1em;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
+
+	ul, li, span {
+		font-size: 1em;
+		color: $skyBlue !important;
+		text-transform: none;
+		width: 100%;
+		display: inline-block;
+	}
+	span {font-size: .8em;}
 }
+
 .dropdownContent.active {
 	opacity: 1;
 	top: -3px;
 	height: auto;
 	width: auto;
 	padding: 0 .5em;
+}
+.dropdownContent--top.active {
+	top: -100%;
+	top: calc(-100% - 5px);
 }
 .dropdownContent--bottom.active {
 	top: 100%;
@@ -961,10 +990,6 @@ body, html {height: 100%;}
 	right: auto;
 	left: 100%;
 	left: calc(100% + 5px);
-}
-.dropdownContent--top.active {
-	top: -100%;
-	top: calc(-100% - 5px);
 }
 
 .dropdownContent li {
