--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -15,7 +15,7 @@
   margin-right: auto;
   display: table; }
 
-.upper {
+.upper, .page-sectionTitle {
   text-transform: uppercase; }
 
 .lower {
@@ -24,7 +24,7 @@
 .capitalize {
   text-transform: capitalize; }
 
-.txt-center, .main-title, .main-subtitle, .main-btn, .card-controls-btn, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title, .postPage-title {
+.txt-center, .main-title, .main-subtitle, .main-btn, .card-controls-btn, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title, .page-sectionTitle, .postPage-title {
   text-align: center; }
 
 .txt-shadow, .main-title, .main-subtitle {
@@ -33,10 +33,10 @@
 .txt-light {
   font-weight: 300; }
 
-.txt-regular, .event-dateAndPlace {
+.txt-regular, .event-dateAndPlace, .page-param .param-value.txt-regular {
   font-weight: 400; }
 
-.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value, .page-name, .page-param .param-value, .page-title, .postPage-title {
+.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value, .page-name, .page-paramSectionTitle, .page-param .param-value, .page-title, .postPage-title {
   font-weight: 500; }
 
 .txt-bold, .main-btn, .card-controls-btn, .homeSlider-btn, .homeSlider-eventLink {
@@ -688,11 +688,32 @@ body, html {
     margin-bottom: .8em;
     border-bottom: 1px solid #e5e5e5; }
     .page-name span {
-      font-size: 1.4em; }
+      font-size: 1.4em;
+      line-height: 1em; }
     .page-name .material-icons {
       position: relative;
       top: .1em;
       color: #0091ea; }
+  .page-sectionTitle {
+    margin: 1em 0 .5em;
+    color: #0091ea; }
+    .page-sectionTitle span {
+      font-size: 1.5em; }
+  .page-paramSection {
+    position: relative;
+    padding: .6em 0 .1em;
+    margin: .5em 0 0;
+    border-top: 1px solid #e5e5e5; }
+  .page-paramSectionTitle {
+    background: #fff;
+    border-radius: 1em;
+    padding: 0 .3em .05em;
+    position: absolute;
+    top: -.7em;
+    left: -.3em; }
+    .page-paramSectionTitle span {
+      font-size: .8em;
+      color: #333; }
   .page-param {
     line-height: 1em;
     padding-bottom: .4em; }
